<resources>
    <string name="app_name">Student Profile PSPU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="activity_main_text">Главная страница личного кабинета студента ПГГПУ</string>
    <string name="nav_header_main_student_name">Имя студента</string>
    <string name="nav_header_main_direction">Направление обучения</string>

    <string name="activity_main_drawer_curriculum">Учебный план</string>
    <string name="activity_main_drawer_schedule">Расписание занятий</string>
    <string name="activity_main_drawer_grades">Оценки</string>
    <string name="activity_main_drawer_payment_information">Информация об оплате</string>
    <string name="activity_main_drawer_ordering_certificates">Заказ справок</string>
    <string name="activity_main_drawer_exit">Выход</string>
    <string name="activity_main_drawer_home">Главная</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSession">Сессии</string>
    <string name="btnSemesters">Семестры</string>
    <string name="updPdf">Обновить</string>
    <string name="nav_header_main_group">Группа</string>
    <string name="nav_header_main_faculty">Факультет</string>
    <string name="activity_main_drawer_hello">Приветствуем в личном кабинете студента ПГГПУ</string>
    <string name="fOrdering_btnPlace">Справка по месту требования</string>
    <string name="fOrdering_btnPension">Справка в пенсионный фонд</string>
    <string name="fOrdering_btnCall">Справка-вызов</string>
    <string name="fOrdering_tvOrdering">Заказанные справки</string>
    <string name="fragment_ordering_child_tvCount">Количество экземпляров:</string>
    <string name="fragment_ordering_child_btnOrder">Заказать</string>
</resources>
