<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llOrdering"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderingCertificatesFragment">

    <Button
        android:id="@+id/btnPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fOrdering_btnPlace" />

    <FrameLayout
        android:id="@+id/flOrderingPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Button
        android:id="@+id/btnPension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fOrdering_btnPension" />

    <FrameLayout
        android:id="@+id/flOrderingPension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fOrdering_btnCall" />

    <FrameLayout
        android:id="@+id/flOrderingCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/fOrdering_tvOrdering"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />


</LinearLayout>
